Упростил функцию считывания грамматики из файла

--- a/LL(1)/LL(1).vcxproj
+++ b/LL(1)/LL(1).vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="LLGenerator.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="StringTrim.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LLGenerator.h" />
