--- a/LL(1)/LL(1).vcxproj.filters
+++ b/LL(1)/LL(1).vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="LLGenerator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="StringTrim.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LLGenerator.h">
