--- a/LL(1)/LL(1).vcxproj.filters
+++ b/LL(1)/LL(1).vcxproj.filters
@@ -21,11 +21,11 @@
     <ClCompile Include="LLGenerator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="StringTrim.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="GuidingSetsGenerator.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Utils.h">
+      <Filter>Header Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
