Добавил template для бегунку, считывает таблицу и программу

--- a/LL(1)/LL(1).vcxproj
+++ b/LL(1)/LL(1).vcxproj
@@ -130,11 +130,13 @@
     <ClCompile Include="GuidingSetsGenerator.cpp" />
     <ClCompile Include="LLGenerator.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="SyntaxSlider.cpp" />
     <ClCompile Include="Utils.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GuidingSetsGenerator.h" />
     <ClInclude Include="LLGenerator.h" />
+    <ClInclude Include="SyntaxSlider.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
