--- a/LL(1)/LL(1).vcxproj
+++ b/LL(1)/LL(1).vcxproj
@@ -138,12 +138,14 @@
     <ClCompile Include="GuidingSetsGenerator.cpp" />
     <ClCompile Include="LLGenerator.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="RemoveLeftRecursionAndFewWays.cpp" />
     <ClCompile Include="SyntaxSlider.cpp" />
     <ClCompile Include="Utils.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GuidingSetsGenerator.h" />
     <ClInclude Include="LLGenerator.h" />
+    <ClInclude Include="RemoveLeftRecursionAndFewWays.h" />
     <ClInclude Include="SyntaxSlider.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
